- Fixed bug #52454 (Relative dates and getTimestamp increments by one day)